src/include/ndarray/base/assert.h

/**
 * Determines if an array is column-major contiguous.
 */
int8_t ndarray_is_column_major_contiguous(
    enum NDARRAY_DTYPE dtype, int64_t ndims, int64_t* shape, int64_t* strides,
    int64_t offset
);
/**
 * Determines if an array is contiguous.
 */
int8_t ndarray_is_contiguous(
    enum NDARRAY_DTYPE dtype, int64_t ndims, int64_t* shape, int64_t* strides,
    int64_t offset
);
/**
 * Determines if an array is row-major based on a provided stride array.
 */
int8_t ndarray_is_row_major(int64_t ndims, int64_t* strides);
/**
 * Determines if an array is row-major contiguous.
 */
int8_t ndarray_is_row_major_contiguous(
    enum NDARRAY_DTYPE dtype, int64_t ndims, int64_t* shape, int64_t* strides,
    int64_t offset
);
/**
 * Determines if an array data type can be safely cast to another data type.
 */
int8_t ndarray_is_safe_data_type_cast(const int8_t from, const int8_t to);
/**
 * Determines if an array data type can be safely cast to, or is of the same
 * "kind" as, another data type.
 */
int8_t ndarray_is_same_kind_data_type_cast(const int8_t from, const int8_t to);
/**
 * Determines if an array is compatible with a single memory segment.
 */
int8_t ndarray_is_single_segment_compatible(
    enum NDARRAY_DTYPE dtype, int64_t ndims, int64_t* shape, int64_t* strides,
    int64_t offset
);