lib/src/bindings.dart


  /// Determines if an array is column-major contiguous.
  int ndarray_is_column_major_contiguous(
    int dtype,
    int ndims,
    ffi.Pointer<ffi.Int64> shape,
    ffi.Pointer<ffi.Int64> strides,
    int offset,
  ) {
    return _ndarray_is_column_major_contiguous(
      dtype,
      ndims,
      shape,
      strides,
      offset,
    );
  }

  late final _ndarray_is_column_major_contiguousPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(
              ffi.Int32,
              ffi.Int64,
              ffi.Pointer<ffi.Int64>,
              ffi.Pointer<ffi.Int64>,
              ffi.Int64)>>('ndarray_is_column_major_contiguous');
  late final _ndarray_is_column_major_contiguous =
      _ndarray_is_column_major_contiguousPtr.asFunction<
          int Function(
              int, int, ffi.Pointer<ffi.Int64>, ffi.Pointer<ffi.Int64>, int)>();

  /// Determines if an array is contiguous.
  int ndarray_is_contiguous(
    int dtype,
    int ndims,
    ffi.Pointer<ffi.Int64> shape,
    ffi.Pointer<ffi.Int64> strides,
    int offset,
  ) {
    return _ndarray_is_contiguous(
      dtype,
      ndims,
      shape,
      strides,
      offset,
    );
  }

  late final _ndarray_is_contiguousPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Int32, ffi.Int64, ffi.Pointer<ffi.Int64>,
              ffi.Pointer<ffi.Int64>, ffi.Int64)>>('ndarray_is_contiguous');
  late final _ndarray_is_contiguous = _ndarray_is_contiguousPtr.asFunction<
      int Function(
          int, int, ffi.Pointer<ffi.Int64>, ffi.Pointer<ffi.Int64>, int)>();

  /// Determines if an array is row-major based on a provided stride array.
  int ndarray_is_row_major(
    int ndims,
    ffi.Pointer<ffi.Int64> strides,
  ) {
    return _ndarray_is_row_major(
      ndims,
      strides,
    );
  }

  late final _ndarray_is_row_majorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(
              ffi.Int64, ffi.Pointer<ffi.Int64>)>>('ndarray_is_row_major');
  late final _ndarray_is_row_major = _ndarray_is_row_majorPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Int64>)>();

  /// Determines if an array is row-major contiguous.
  int ndarray_is_row_major_contiguous(
    int dtype,
    int ndims,
    ffi.Pointer<ffi.Int64> shape,
    ffi.Pointer<ffi.Int64> strides,
    int offset,
  ) {
    return _ndarray_is_row_major_contiguous(
      dtype,
      ndims,
      shape,
      strides,
      offset,
    );
  }

  late final _ndarray_is_row_major_contiguousPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(
              ffi.Int32,
              ffi.Int64,
              ffi.Pointer<ffi.Int64>,
              ffi.Pointer<ffi.Int64>,
              ffi.Int64)>>('ndarray_is_row_major_contiguous');
  late final _ndarray_is_row_major_contiguous =
      _ndarray_is_row_major_contiguousPtr.asFunction<
          int Function(
              int, int, ffi.Pointer<ffi.Int64>, ffi.Pointer<ffi.Int64>, int)>();

  /// Determines if an array data type can be safely cast to another data type.
  int ndarray_is_safe_data_type_cast(
    int from,
    int to,
  ) {
    return _ndarray_is_safe_data_type_cast(
      from,
      to,
    );
  }

  late final _ndarray_is_safe_data_type_castPtr =
      _lookup<ffi.NativeFunction<ffi.Int8 Function(ffi.Int8, ffi.Int8)>>(
          'ndarray_is_safe_data_type_cast');
  late final _ndarray_is_safe_data_type_cast =
      _ndarray_is_safe_data_type_castPtr.asFunction<int Function(int, int)>();

  /// Determines if an array data type can be safely cast to, or is of the same
  /// "kind" as, another data type.
  int ndarray_is_same_kind_data_type_cast(
    int from,
    int to,
  ) {
    return _ndarray_is_same_kind_data_type_cast(
      from,
      to,
    );
  }

  late final _ndarray_is_same_kind_data_type_castPtr =
      _lookup<ffi.NativeFunction<ffi.Int8 Function(ffi.Int8, ffi.Int8)>>(
          'ndarray_is_same_kind_data_type_cast');
  late final _ndarray_is_same_kind_data_type_cast =
      _ndarray_is_same_kind_data_type_castPtr
          .asFunction<int Function(int, int)>();

  /// Determines if an array is compatible with a single memory segment.
  int ndarray_is_single_segment_compatible(
    int dtype,
    int ndims,
    ffi.Pointer<ffi.Int64> shape,
    ffi.Pointer<ffi.Int64> strides,
    int offset,
  ) {
    return _ndarray_is_single_segment_compatible(
      dtype,
      ndims,
      shape,
      strides,
      offset,
    );
  }

  late final _ndarray_is_single_segment_compatiblePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(
              ffi.Int32,
              ffi.Int64,
              ffi.Pointer<ffi.Int64>,
              ffi.Pointer<ffi.Int64>,
              ffi.Int64)>>('ndarray_is_single_segment_compatible');
  late final _ndarray_is_single_segment_compatible =
      _ndarray_is_single_segment_compatiblePtr.asFunction<
          int Function(
              int, int, ffi.Pointer<ffi.Int64>, ffi.Pointer<ffi.Int64>, int)>();

  /// Converts subscripts to a linear index.
  int ndarray_sub2ind(
    int ndims,
    ffi.Pointer<ffi.Int64> shape,
    ffi.Pointer<ffi.Int64> strides,
    int offset,
    ffi.Pointer<ffi.Int64> sub,
    int nmodes,
    ffi.Pointer<ffi.Int8> modes,
  ) {
    return _ndarray_sub2ind(
      ndims,
      shape,
      strides,
      offset,
      sub,
      nmodes,
      modes,
    );
  }

  late final _ndarray_sub2indPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int64 Function(
              ffi.Int64,
              ffi.Pointer<ffi.Int64>,
              ffi.Pointer<ffi.Int64>,
              ffi.Int64,
              ffi.Pointer<ffi.Int64>,
              ffi.Int64,
              ffi.Pointer<ffi.Int8>)>>('ndarray_sub2ind');
  late final _ndarray_sub2ind = _ndarray_sub2indPtr.asFunction<
      int Function(int, ffi.Pointer<ffi.Int64>, ffi.Pointer<ffi.Int64>, int,
          ffi.Pointer<ffi.Int64>, int, ffi.Pointer<ffi.Int8>)>();

  ffi.Pointer<ffi.Char> VersionString() {
    return _VersionString();
  }

  late final _VersionStringPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'VersionString');
  late final _VersionString =
      _VersionStringPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  int InitDartApiDL(
    ffi.Pointer<ffi.Void> data,
  ) {
    return _InitDartApiDL(
      data,
    );
  }

  late final _InitDartApiDLPtr =
      _lookup<ffi.NativeFunction<ffi.IntPtr Function(ffi.Pointer<ffi.Void>)>>(
          'InitDartApiDL');
  late final _InitDartApiDL =
      _InitDartApiDLPtr.asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  /// Returns a pointer to a dynamically allocated ndarray.
  ffi.Pointer<ndarray> ndarray_allocate(
    int dtype,
    ffi.Pointer<ffi.Uint8> data,
    int ndims,
    ffi.Pointer<ffi.Int64> shape,
    ffi.Pointer<ffi.Int64> strides,
    int offset,
    int order,
    int imode,
    int nsubmodes,
    ffi.Pointer<ffi.Int8> submodes,
  ) {
    return _ndarray_allocate(
      dtype,
      data,
      ndims,
      shape,
      strides,
      offset,
      order,
      imode,
      nsubmodes,
      submodes,
    );
  }

  late final _ndarray_allocatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ndarray> Function(
              ffi.Int16,
              ffi.Pointer<ffi.Uint8>,
              ffi.Int64,
              ffi.Pointer<ffi.Int64>,
              ffi.Pointer<ffi.Int64>,
              ffi.Int64,
              ffi.Int8,
              ffi.Int8,
              ffi.Int64,
              ffi.Pointer<ffi.Int8>)>>('ndarray_allocate');
  late final _ndarray_allocate = _ndarray_allocatePtr.asFunction<
      ffi.Pointer<ndarray> Function(
          int,
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Int64>,
          ffi.Pointer<ffi.Int64>,
          int,
          int,
          int,
          int,
          ffi.Pointer<ffi.Int8>)>();

  /// Returns the size of an ndarray (in bytes).
  int ndarray_bytelength(
    ffi.Pointer<ndarray> arr,
  ) {
    return _ndarray_bytelength(
      arr,
    );
  }

  late final _ndarray_bytelengthPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function(ffi.Pointer<ndarray>)>>(
          'ndarray_bytelength');
  late final _ndarray_bytelength =
      _ndarray_bytelengthPtr.asFunction<int Function(ffi.Pointer<ndarray>)>();

  /// Returns a pointer to an ndarray's underlying byte array.
  ffi.Pointer<ffi.Uint8> ndarray_data(
    ffi.Pointer<ndarray> arr,
  ) {
    return _ndarray_data(
      arr,
    );
  }

  late final _ndarray_dataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Uint8> Function(
              ffi.Pointer<ndarray>)>>('ndarray_data');
  late final _ndarray_data = _ndarray_dataPtr
      .asFunction<ffi.Pointer<ffi.Uint8> Function(ffi.Pointer<ndarray>)>();

  /// Returns an ndarray dimension.
  int ndarray_dimension(
    ffi.Pointer<ndarray> arr,
    int i,
  ) {
    return _ndarray_dimension(
      arr,
      i,
    );
  }

  late final _ndarray_dimensionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int64 Function(
              ffi.Pointer<ndarray>, ffi.Int64)>>('ndarray_dimension');
  late final _ndarray_dimension = _ndarray_dimensionPtr
      .asFunction<int Function(ffi.Pointer<ndarray>, int)>();

  /// Disables specified ndarray flags.
  int ndarray_disable_flags(
    ffi.Pointer<ndarray> arr,
    int flags,
  ) {
    return _ndarray_disable_flags(
      arr,
      flags,
    );
  }

  late final _ndarray_disable_flagsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(
              ffi.Pointer<ndarray>, ffi.Int64)>>('ndarray_disable_flags');
  late final _ndarray_disable_flags = _ndarray_disable_flagsPtr
      .asFunction<int Function(ffi.Pointer<ndarray>, int)>();

  /// Returns an ndarray data type.
  int ndarray_dtype(
    ffi.Pointer<ndarray> arr,
  ) {
    return _ndarray_dtype(
      arr,
    );
  }

  late final _ndarray_dtypePtr =
      _lookup<ffi.NativeFunction<ffi.Int16 Function(ffi.Pointer<ndarray>)>>(
          'ndarray_dtype');
  late final _ndarray_dtype =
      _ndarray_dtypePtr.asFunction<int Function(ffi.Pointer<ndarray>)>();

  /// Enables specified ndarray flags.
  int ndarray_enable_flags(
    ffi.Pointer<ndarray> arr,
    int flags,
  ) {
    return _ndarray_enable_flags(
      arr,
      flags,
    );
  }

  late final _ndarray_enable_flagsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(
              ffi.Pointer<ndarray>, ffi.Int64)>>('ndarray_enable_flags');
  late final _ndarray_enable_flags = _ndarray_enable_flagsPtr
      .asFunction<int Function(ffi.Pointer<ndarray>, int)>();

  /// Returns ndarray flags.
  int ndarray_flags(
    ffi.Pointer<ndarray> arr,
  ) {
    return _ndarray_flags(
      arr,
    );
  }

  late final _ndarray_flagsPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function(ffi.Pointer<ndarray>)>>(
          'ndarray_flags');
  late final _ndarray_flags =
      _ndarray_flagsPtr.asFunction<int Function(ffi.Pointer<ndarray>)>();

  /// Frees an ndarray's allocated memory.
  void ndarray_free(
    ffi.Pointer<ndarray> arr,
  ) {
    return _ndarray_free(
      arr,
    );
  }

  late final _ndarray_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ndarray>)>>(
          'ndarray_free');
  late final _ndarray_free =
      _ndarray_freePtr.asFunction<void Function(ffi.Pointer<ndarray>)>();

  /// Tests whether an ndarray has specified flags enabled.
  int ndarray_has_flags(
    ffi.Pointer<ndarray> arr,
    int flags,
  ) {
    return _ndarray_has_flags(
      arr,
      flags,
    );
  }

  late final _ndarray_has_flagsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(
              ffi.Pointer<ndarray>, ffi.Int64)>>('ndarray_has_flags');
  late final _ndarray_has_flags = _ndarray_has_flagsPtr
      .asFunction<int Function(ffi.Pointer<ndarray>, int)>();
